--- a/RepoZ.App.Win/i18n/en-us.xaml
+++ b/RepoZ.App.Win/i18n/en-us.xaml
@@ -12,7 +12,7 @@ Go ahead and switch a branch or change a file in any repository on your computer
 Alternatively, you can scan your computer manually for repositories in the settings menu on the top right.</system:String>
 	<system:String x:Key="Help">Help</system:String>
 	<system:String x:Key="Donate">Sponsor me on GitHub</system:String>
-	<system:String x:Key="Follow">Follow me on Twitter</system:String>
+	<system:String x:Key="Follow">Follow me on Twitter: @Waescher</system:String>
 	<system:String x:Key="Star">Star RepoZ on GitHub</system:String>
 	<system:String x:Key="PingBack">Ping back ♥︎</system:String>
 	<system:String x:Key="Aggresive">Aggresive</system:String>
