--- a/RepoZ.App.Win/MainWindow.xaml
+++ b/RepoZ.App.Win/MainWindow.xaml
@@ -201,8 +201,11 @@
             </Grid>
             <ScrollViewer>
                 <StackPanel>
-
-                    <TextBlock Name="txtHelp"
+					<TextBlock Name="txtHelpCaption"
+							   TextWrapping="Wrap"
+							   TextElement.FontWeight="Bold"
+							   TextElement.FontSize="12" />
+					<TextBlock Name="txtHelp"
 							   TextWrapping="Wrap"
 							   TextElement.FontSize="12" />
                     <Button Command="{x:Static materialDesign:Transitioner.MovePreviousCommand}"
