--- a/RepoZ.App.Win/i18n/de-DE.xaml
+++ b/RepoZ.App.Win/i18n/de-DE.xaml
@@ -33,6 +33,7 @@ Alternativ, kann der Computer auch über das Menü oben rechts nach Repositories
 	<system:String x:Key="Open in Windows File Explorer">In Windows Explorer öffnen</system:String>
 	<system:String x:Key="Open in Windows PowerShell">In Windows PowerShell öffnen</system:String>
 	<system:String x:Key="Open in Windows Command Prompt">In Windows Eingabeaufforderung öffnen</system:String>
+	<system:String x:Key="Open in Visual Studio Code">In Visual Studio Code öffnen</system:String>
 	<system:String x:Key="Open in Git Bash">In Git Bash öffnen</system:String>
 	<system:String x:Key="Open in Finder">In Finder öffnen</system:String>
 	<system:String x:Key="Open in Terminal">Im Terminal öffnen</system:String>
