--- a/RepoZ.App.Win/i18n/en-us.xaml
+++ b/RepoZ.App.Win/i18n/en-us.xaml
@@ -31,10 +31,11 @@ Alternatively, you can scan your computer manually for repositories in the setti
 	<system:String x:Key="Exit">Exit</system:String>
 	<system:String x:Key="NotStartWithWindows">Do not start with Windows</system:String>
 	<system:String x:Key="Scanning">Scanning ...</system:String>
-	<system:String x:Key="Open in Windows File Explorer">Open In Windows File Explorer</system:String>
-	<system:String x:Key="Open in Windows PowerShell">Open In Windows PowerShell</system:String>
-	<system:String x:Key="Open in Windows Command Prompt">Open In Windows Command Prompt</system:String>
-	<system:String x:Key="Open in Git Bash">Open In Git Bash</system:String>
+	<system:String x:Key="Open in Windows File Explorer">Open in Windows File Explorer</system:String>
+	<system:String x:Key="Open in Windows PowerShell">Open in Windows PowerShell</system:String>
+	<system:String x:Key="Open in Windows Command Prompt">Open in Windows Command Prompt</system:String>
+	<system:String x:Key="Open in Visual Studio Code">Open in Visual Studio Code</system:String>
+	<system:String x:Key="Open in Git Bash">Open in Git Bash</system:String>
 	<system:String x:Key="Open in Finder">Open in Finder</system:String>
 	<system:String x:Key="Open in Terminal">Open in Terminal</system:String>
 	<system:String x:Key="Fetch">Fetch</system:String>
