--- a/RepoZ.App.Win/i18n/zh-cn.xaml
+++ b/RepoZ.App.Win/i18n/zh-cn.xaml
@@ -33,6 +33,7 @@
     <system:String x:Key="Open in Windows File Explorer">在资源管理器中打开</system:String>
     <system:String x:Key="Open in Windows PowerShell">在 PowerShell 中打开</system:String>
     <system:String x:Key="Open in Windows Command Prompt">在命令提示符中打开</system:String>
+	<system:String x:Key="Open in Visual Studio Code">在 Visual Studio Code 中打开</system:String>
     <system:String x:Key="Open in Git Bash">在 Git Bash 中打开</system:String>
     <system:String x:Key="Open in Finder">在 Finder 中打开</system:String>
     <system:String x:Key="Open in Terminal">在 Terminal 中打开</system:String>
