--- a/RepoZ.App.Win/i18n/en-us.xaml
+++ b/RepoZ.App.Win/i18n/en-us.xaml
@@ -15,7 +15,7 @@ Alternatively, you can scan your computer manually for repositories in the setti
 	<system:String x:Key="Follow">Follow me on Twitter: @Waescher</system:String>
 	<system:String x:Key="Star">Star RepoZ on GitHub</system:String>
 	<system:String x:Key="PingBack">Ping back ♥︎</system:String>
-	<system:String x:Key="Aggresive">Aggresive</system:String>
+	<system:String x:Key="Aggresive">Aggressive</system:String>
 	<system:String x:Key="Adequate">Adequate</system:String>
 	<system:String x:Key="Discretely">Discretely</system:String>
 	<system:String x:Key="Off">Off</system:String>
@@ -78,6 +78,6 @@ Please note:
 This information reflects the state of the remote tracked branch after the last "git fetch".
 You can enable Auto fetch in the RepoZ menu to keep the information up to date.
 
-Note that the status might be shorter if possible to improve readablility.
+Note that the status might be shorter if possible to improve readability.
 </system:String>
 </ResourceDictionary>
