--- a/RepoZ.App.Win/i18n/en-us.xaml
+++ b/RepoZ.App.Win/i18n/en-us.xaml
@@ -35,6 +35,7 @@ Alternatively, you can scan your computer manually for repositories in the setti
 	<system:String x:Key="Open in Windows PowerShell">Open in Windows PowerShell</system:String>
 	<system:String x:Key="Open in Windows Command Prompt">Open in Windows Command Prompt</system:String>
 	<system:String x:Key="Open in Visual Studio Code">Open in Visual Studio Code</system:String>
+	<system:String x:Key="Open Visual Studio solutions">Open Visual Studio solutions</system:String>
 	<system:String x:Key="Open in Git Bash">Open in Git Bash</system:String>
 	<system:String x:Key="Open in Finder">Open in Finder</system:String>
 	<system:String x:Key="Open in Terminal">Open in Terminal</system:String>
