--- a/RepoZ.App.Win/i18n/de-DE.xaml
+++ b/RepoZ.App.Win/i18n/de-DE.xaml
@@ -39,6 +39,7 @@ Alternativ, kann der Computer auch über das Menü oben rechts nach Repositories
 	<system:String x:Key="Open in Finder">In Finder öffnen</system:String>
 	<system:String x:Key="Open in Terminal">Im Terminal öffnen</system:String>
     <system:String x:Key="Open {0}">{0} öffnen</system:String>
+	<system:String x:Key="Browse remote">Remote-Branch öffnen</system:String>
 	<system:String x:Key="Fetch">Git Fetch</system:String>
 	<system:String x:Key="Pull">Git Pull</system:String>
 	<system:String x:Key="Push">Git Push</system:String>
