--- a/RepoZ.App.Win/i18n/en-us.xaml
+++ b/RepoZ.App.Win/i18n/en-us.xaml
@@ -40,7 +40,7 @@ Alternatively, you can scan your computer manually for repositories in the setti
 	<system:String x:Key="Open in Finder">Open in Finder</system:String>
 	<system:String x:Key="Open in Terminal">Open in Terminal</system:String>
 	<system:String x:Key="Open {0}">Open {0}</system:String>
-	<system:String x:Key="Browse remote">Browse remote</system:String>
+	<system:String x:Key="Browse remote">Browse remote repository</system:String>
 	<system:String x:Key="Fetch">Fetch</system:String>
 	<system:String x:Key="Pull">Pull</system:String>
 	<system:String x:Key="Push">Push</system:String>
