--- a/RepoZ.App.Win/i18n/de-DE.xaml
+++ b/RepoZ.App.Win/i18n/de-DE.xaml
@@ -38,6 +38,7 @@ Alternativ, kann der Computer auch über das Menü oben rechts nach Repositories
 	<system:String x:Key="Open in Git Bash">In Git Bash öffnen</system:String>
 	<system:String x:Key="Open in Finder">In Finder öffnen</system:String>
 	<system:String x:Key="Open in Terminal">Im Terminal öffnen</system:String>
+	<system:String x:Key="Open in Sourcetree">Im Sourcetree öffnen</system:String>	
     <system:String x:Key="Open {0}">{0} öffnen</system:String>
 	<system:String x:Key="Browse remote">Remote-Repository öffnen</system:String>
 	<system:String x:Key="Fetch">Git Fetch</system:String>
