--- a/RepoZ.App.Win/i18n/de-DE.xaml
+++ b/RepoZ.App.Win/i18n/de-DE.xaml
@@ -1,4 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:RepoZ.App.Win.i18n"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
@@ -38,7 +38,7 @@ Alternativ, kann der Computer auch über das Menü oben rechts nach Repositories
 	<system:String x:Key="Open in Git Bash">In Git Bash öffnen</system:String>
 	<system:String x:Key="Open in Finder">In Finder öffnen</system:String>
 	<system:String x:Key="Open in Terminal">Im Terminal öffnen</system:String>
-	<system:String x:Key="Open in Sourcetree">Im Sourcetree öffnen</system:String>	
+	<system:String x:Key="Open in Sourcetree">In Sourcetree öffnen</system:String>	
     <system:String x:Key="Open {0}">{0} öffnen</system:String>
 	<system:String x:Key="Browse remote">Remote-Repository öffnen</system:String>
 	<system:String x:Key="Fetch">Git Fetch</system:String>
