--- a/RepoZ.App.Win/i18n/nl-NL.xaml
+++ b/RepoZ.App.Win/i18n/nl-NL.xaml
@@ -68,20 +68,20 @@ In dit geval is de lokale branch op het zelfde niveau als de remote branch.
 ... geeft aan dat de lokale branch achter loopt op de remote branch met het aangegeven aantal commits. Gebruik "git pull" om de lokale branch te updaten.
 
 {5}
-... geeft aan dat de lokale branch geen "upstream branch" heeft op de remote repository. Gebruik "git push" met extra argument "--set-upstream" om de branch naar een remote repository te sturen..
+... geeft aan dat de lokale branch geen "upstream branch" heeft op de remote repository. Gebruik "git push" met extra argument "--set-upstream" om de branch naar een remote repository te sturen.
 
 
-The following numbers represent added (+1), modified (~2) and removed files (-3) from the index.
-The numbers after the pipe sign represent added (+4), modified (~5) and removed files (-6) on the working directory.
+De volgende nummers betekenen toegevoegde (+1), gewijzigde (~2) en verwijderde bestanden (-3) ten opzichte van de index.
+De nummers na het pipe-symbool betekenen toegevoegde (+4), gewijzigde (~5) en verwijderde bestanden (-6) op de werkende directory.
 
 {6}&lt;num&gt;
-... indicates that there are stashed changes available.
+... geeft aan dat er items gestashed zijn.
 
 
-Please note:
-This information reflects the state of the remote tracked branch after the last "git fetch".
-You can enable Auto fetch in the RepoZ menu to keep the information up to date.
+Disclaimer:
+De informatie is gebaseerd op de status van de remote branch na de laaste "git fetch".
+Het is mogelijk om "auto fetch" in het menu aan te zetten zodat de informatie actueel is.
 
-Note that the status might be shorter if possible to improve readability.
+Om de leesbaarheid te bevorderen kan het zijn dat de status informatie korter is dan hierbover beschreven.
 </system:String>
 </ResourceDictionary>
