--- a/RepoZ.App.Win/i18n/zh-cn.xaml
+++ b/RepoZ.App.Win/i18n/zh-cn.xaml
@@ -81,4 +81,10 @@ master
 
 如果可能，将会使用短状态来提高可读性。
     </system:String>
+	<system:String x:Key="OK">OK</system:String>
+	<system:String x:Key="Could not read repository actions">Could not read repository actions</system:String>
+	<system:String x:Key="Fix">Fix</system:String>
+	<system:String x:Key="Remote branches">Remote branches</system:String>
+	<system:String x:Key="No remote branches found">No remote branches found</system:String>
+	<system:String x:Key="Try to fetch changes if you're expecting remote branches">Try to fetch changes if you're expecting remote branches</system:String>
 </ResourceDictionary>
