Allow repository action translations on Windows

--- a/RepoZ.App.Win/i18n/nl-NL.xaml
+++ b/RepoZ.App.Win/i18n/nl-NL.xaml
@@ -31,17 +31,10 @@ Handmatig zoeken naar Git repositories is ook mogelijk via het instellingen menu
 	<system:String x:Key="Exit">Sluiten</system:String>
 	<system:String x:Key="NotStartWithWindows">Niet automatisch starten met Windows</system:String>
 	<system:String x:Key="Scanning">Zoeken naar Git repositories ...</system:String>
-	<system:String x:Key="Open in Windows File Explorer">Openen in Windows Verkenner</system:String>
-	<system:String x:Key="Open in Windows PowerShell">Openen in Windows PowerShell</system:String>
-	<system:String x:Key="Open in Windows Command Prompt">Openen in Windows Command Prompt</system:String>
-	<system:String x:Key="Open in Visual Studio Code">Openen in Visual Studio Code</system:String>
-	<system:String x:Key="Open Visual Studio solutions">Open Visual Studio solutions</system:String>
-	<system:String x:Key="Open in Git Bash">Openen in Git Bash</system:String>
-	<system:String x:Key="Open in Finder">Openen in Finder</system:String>
-	<system:String x:Key="Open in Terminal">Openen in Terminal</system:String>
-	<system:String x:Key="Open in Sourcetree">Openen in Sourcetree</system:String>
-	<system:String x:Key="Open {0}">Open {0}</system:String>
-	<system:String x:Key="Browse remote">Remote repository openen</system:String>
+    <system:String x:Key="(Open)">Open {0}</system:String>
+    <system:String x:Key="(OpenIn)">Open in {0}</system:String>
+    <system:String x:Key="(OpenWith)">Open with {0}</system:String>
+    <system:String x:Key="Browse remote">Remote repository openen</system:String>
 	<system:String x:Key="Fetch">Git Fetch</system:String>
 	<system:String x:Key="Pull">Git Pull</system:String>
 	<system:String x:Key="Push">Git Push</system:String>
