--- a/RepoZ.App.Win/i18n/de-DE.xaml
+++ b/RepoZ.App.Win/i18n/de-DE.xaml
@@ -30,17 +30,10 @@ Alternativ, kann der Computer auch über das Menü oben rechts nach Repositories
 	<system:String x:Key="Exit">Beenden</system:String>
 	<system:String x:Key="NotStartWithWindows">Nicht mehr mit Windows starten</system:String>
 	<system:String x:Key="Scanning">Suche nach Repositories ...</system:String>
-	<system:String x:Key="Open in Windows File Explorer">In Windows Explorer öffnen</system:String>
-	<system:String x:Key="Open in Windows PowerShell">In Windows PowerShell öffnen</system:String>
-	<system:String x:Key="Open in Windows Command Prompt">In Windows Eingabeaufforderung öffnen</system:String>
-	<system:String x:Key="Open in Visual Studio Code">In Visual Studio Code öffnen</system:String>
-	<system:String x:Key="Open Visual Studio solutions">Visual Studio Solutions öffnen</system:String>
-	<system:String x:Key="Open in Git Bash">In Git Bash öffnen</system:String>
-	<system:String x:Key="Open in Finder">In Finder öffnen</system:String>
-	<system:String x:Key="Open in Terminal">Im Terminal öffnen</system:String>
-	<system:String x:Key="Open in Sourcetree">In Sourcetree öffnen</system:String>	
-    <system:String x:Key="Open {0}">{0} öffnen</system:String>
-	<system:String x:Key="Browse remote">Remote-Repository öffnen</system:String>
+    <system:String x:Key="(Open)">{0} öffnen</system:String>
+    <system:String x:Key="(OpenIn)">In {0} öffnen</system:String>
+    <system:String x:Key="(OpenWith)">Mit {0} öffnen</system:String>
+    <system:String x:Key="Browse remote">Remote-Repository öffnen</system:String>
 	<system:String x:Key="Fetch">Git Fetch</system:String>
 	<system:String x:Key="Pull">Git Pull</system:String>
 	<system:String x:Key="Push">Git Push</system:String>
