--- a/RepoZ.App.Win/i18n/zh-cn.xaml
+++ b/RepoZ.App.Win/i18n/zh-cn.xaml
@@ -30,17 +30,10 @@
     <system:String x:Key="Exit">退出</system:String>
     <system:String x:Key="NotStartWithWindows">不要随 Windows 启动</system:String>
     <system:String x:Key="Scanning">扫描中 ...</system:String>
-    <system:String x:Key="Open in Windows File Explorer">在资源管理器中打开</system:String>
-    <system:String x:Key="Open in Windows PowerShell">在 PowerShell 中打开</system:String>
-    <system:String x:Key="Open in Windows Command Prompt">在命令提示符中打开</system:String>
-	<system:String x:Key="Open in Visual Studio Code">在 Visual Studio Code 中打开</system:String>
-	<system:String x:Key="Open Visual Studio solutions">Open Visual Studio solutions</system:String>
-	<system:String x:Key="Open in Git Bash">在 Git Bash 中打开</system:String>
-    <system:String x:Key="Open in Finder">在 Finder 中打开</system:String>
-    <system:String x:Key="Open in Terminal">在 Terminal 中打开</system:String>
-    <system:String x:Key="Open in Sourcetree">Open in Sourcetree</system:String>
-    <system:String x:Key="Open {0}">打开 {0}</system:String>
-	<system:String x:Key="Browse remote">Browse remote repository</system:String>
+    <system:String x:Key="(Open)">Open {0}</system:String>
+    <system:String x:Key="(OpenIn)">Open in {0}</system:String>
+    <system:String x:Key="(OpenWith)">Open with {0}</system:String>
+    <system:String x:Key="Browse remote">Browse remote repository</system:String>
     <system:String x:Key="Fetch">获取</system:String>
     <system:String x:Key="Pull">拉取</system:String>
     <system:String x:Key="Push">推送</system:String>
