--- a/RepoZ.App.Win/i18n/en-us.xaml
+++ b/RepoZ.App.Win/i18n/en-us.xaml
@@ -54,10 +54,10 @@ master
 ... represents the branch status in relation to its remote (tracked origin) branch.
 In this case, the local branch is at the same commit level as the remote branch.
 
-{3}&lt;num&gt;
+{3}4
 ... indicates that the local branch is ahead of the remote branch by the specified number of commits; a "git push" is required to update the remote branch.
 
-{4}&lt;num&gt;
+{4}8
 ... indicates that the local branch is behind the remote branch by the specified number of commits; a "git pull" is required to update the local branch.
 
 {5}
@@ -67,9 +67,8 @@ In this case, the local branch is at the same commit level as the remote branch.
 The following numbers represent added (+1), modified (~2) and removed files (-3) from the index.
 The numbers after the pipe sign represent added (+4), modified (~5) and removed files (-6) on the working directory.
 
-{6}&lt;num&gt;
-... indicates that there are stashed changes available.
-
+{6}3
+... indicates that there are a corresponding number of stashed changes.
 
 Please note:
 This information reflects the state of the remote tracked branch after the last "git fetch".
@@ -85,5 +84,5 @@ Note that the status might be shorter if possible to improve readability.
 	<system:String x:Key="No remote branches found">No remote branches found</system:String>
 	<system:String x:Key="Try to fetch changes if you're expecting remote branches">Try to fetch changes if you're expecting remote branches</system:String>
     <system:String x:Key="Advanced">Advanced</system:String>
-    <system:String x:Key="PruneOnFetch">Clean up stale remote branches on fetch</system:String>
+    <system:String x:Key="PruneOnFetch">Prune remote branches on fetch</system:String>
 </ResourceDictionary>
